0.2.4.1037
Commit by berrinam:
    - Made PgDn/PgUp do a jump of 1000 frames; made >> jump 25 frames
    - Add extra resizers for AviSynth
    - Save jobs on creation
    - Fixed 1650887 (x264 doesn't understand --crf 18,0)
    - Fixed 1651387 (reset button does not remove audio cut file reference)

0.2.4.1036
Commit by berrinam:
    - Fixed 1650271 (Queue analysis pass does nothing)

0.2.4.1035
Commit by berrinam:
    - Added support for non-integer crf in x264

0.2.4.1034
Commit by berrinam:
    - Added support for --deadzone in x264

0.2.4.1033
Commit by berrinam:
    - Fixed 1647524 ("optional output extensions" are not saving at next sessions)
    - Fixed 1647520 ("advanced tooltip" not working)

0.2.4.1032
Commit by berrinam:
    - Fixed 1647454 (crash with German FPS in AVS window)

0.2.4.1031
Commit by berrinam:
    - Add an AviSynth cutter (allows audio and video cutting)

0.2.4.1030
Commit by berrinam:
    - Fixed 1599119 (updater does not respect user-selected paths)
    - Fixed 1646706 (crash with autoencode and audio)

0.2.4.1029
Commit by berrinam:
    - Fixed 1621767: Made OneClick suggest an output filename again
    - Fixed 1646330: Made OneClick show the correct output filename filter

0.2.4.1028
Commit by berrinam:
    - Made the audio output a save dialog
    - Made the FPS changeable in AVS window
    - Changing deinterlace filter now updates the script
    - Made 'Zone' a class, not a struct, which fixes zones setting bug. (Unfortunately, other bugs may have been created)
    - Fix the bug where MeGUI crashes on deleting multiple jobs.

0.2.4.1027
Commit by berrinam:
    - Ensure Profile Porter deletes necessary files on closing

0.2.4.1026
Commit by berrinam:
    - Profile Porter window is now TopMost

0.2.4.1025
Commit by berrinam:
    - Fix profile import/export behavior, especially with CQMs, etc

0.2.4.1024
Commit by berrinam:
    - Nicer profile behavior, and detection whether you've actually changed the profile or not