@@ -3,6 +3,7 @@ Commit by berrinam:
     - Made PgDn/PgUp do a jump of 1000 frames; made >> jump 25 frames
     - Add extra resizers for AviSynth
     - Save jobs on creation
+    - Support 'install priority' for autoupdate -- allows very coarse dependencies to be expressed
     - Fixed 1650887 (x264 doesn't understand --crf 18,0)
     - Fixed 1651387 (reset button does not remove audio cut file reference)
 
